# waterq_auto_sync

./: .gitignore  README.md  pyproject.toml  start_dg_daemon.sh  start_dg_webserver.sh  stop_dg_daemon.sh  stop_dg_webserver.sh
.dg/: telemetry.yaml
dagster_home/: dagster.yaml
src/waterq_auto_sync/: workspace.yaml
src/waterq_auto_sync/defs/: assets.py  bmwp_assets.py  constants.py  jobs.py  resources.py  schedules.py  tools.py  wqi_assets.py
